# gpu-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  servers.toml
.github/workflows/: publish.yml
app/: config.py  gpu_monitor.py  main.py  ssh_client.py
gpu_monitor/: cli.py  config.py  gpu_monitor.py  main.py  models.py  monitor.py  ssh_client.py
gpu_monitor/collectors/: __init__.py  ascend.py  base.py  common.py  nvidia.py
gpu_monitor/static/: app.js  index.html  styles.css
static/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py  test_config.py  test_gpu_monitor.py  test_ssh_client.py  test_static_refresh.mjs
