[project]
name = "gpu-monitor"
version = "0.1.0"
description = "GPU cluster monitoring service"
authors = [
    { name = "Chen Ning", email = "ningchenthu@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
